<resources>
    <string name="app_name">xo</string>
    <string name="x_o">X-O</string>
    <string name="turns">Turns</string>
    <string name="start">Start</string>
    <string name="update">update</string>
    <string name="winner_is">Winner is:</string>
    <string name="enter_number_of_players">Enter number of players</string>
    <string name="enter_player_names">Enter Player Names</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="o">O</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="x">X</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
</resources>
